--- a/app/package.json
+++ b/app/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "fomantic-ui": "^2.7.6",
     "fomantic-ui-css": "^2.7.6",
+    "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "semantic-ui-react": "^0.87.2"
   },
