--- a/app/package.json
+++ b/app/package.json
@@ -3,17 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^2.8.0",
     "fomantic-ui": "^2.7.6",
     "fomantic-ui-css": "^2.7.6",
     "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-alice-carousel": "^1.15.1",
+    "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "recharts": "^1.6.2",
     "semantic-ui-carousel-react": "^1.0.4",
-    "semantic-ui-react": "^0.87.2"
+    "semantic-ui-react": "^0.87.2",
+    "victory": "^32.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@material-ui/core": "^4.1.3"
   }
 }
