--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "react": "^16.8.6",
     "react-alice-carousel": "^1.15.1",
     "react-chartjs-2": "^2.7.6",
+    "react-coverflow": "^0.2.20",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
